Fixed some spacing issues with content and footer

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -19,7 +19,6 @@ body {
   margin: 0;
   padding: 1em;
   position: relative;
-
 }
 
 h2 {
@@ -33,7 +32,7 @@ h2 {
 .page-wrapper {
   display: grid;
   grid-template-columns: 25% 1fr;
-  grid-template-rows: 30% 1fr;
+  grid-template-rows: 30% 1fr 15%;
   grid-gap: 10px;
 }
 
@@ -75,16 +74,20 @@ header {
   margin: 0;
   padding: 0;
   grid-column: 2 / -1;
-  grid-row: 2 / 4;
+  grid-row: 2 / 3;
 }
 
 #zen-supporting {
   grid-column: 2 / -1;
+  grid-gap: 10px;
   padding: 0;
   margin: 35px 0 0 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  // position: relative;
+  // top: -120px;
 }
 
 #zen-supporting > div {
@@ -103,13 +106,21 @@ header {
 }
 
 footer {
-  padding: 0;
-  margin: 0;
+  padding: 10px;
+  margin: 10px;
   background-color: lightblue;
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
+  width: 90%;
+  height: 80px;
+  grid-column: 1 / 4;
+  grid-row: 3 / 4;
+}
+
+footer > a {
+  float: left;
+  margin: 5px;
 }
 
 .sidebar {
@@ -125,11 +136,39 @@ footer {
 #zen-resources {
   padding: 0;
   margin: 0;
-  background-color: green;
+  background-color: $background-color;
   position: absolute;
-  bottom: 0;
-  right: 0;
+  bottom: 10px;
+  right: 10px;
+  width: 50%;
+  height: 80px;
 }
+
+#zen-resources > ul {
+  padding: 0;
+  margin: 0;
+}
+
+#zen-resources > ul > li {
+  list-style-type: none;
+}
+
+#zen-resources > ul > li > a {
+  font-size: 15px;
+  background-color: $accent2;
+  color: $primary;
+  transition: background-color .3s ease-in-out;
+  padding: 5px;
+  margin: 0 10px 15px 0;
+  float: right;
+}
+
+#zen-resources > ul > li > a:hover {
+  font-size: 15px;
+  background-color: $primary;
+  color: $accent2;
+}
+
 
 #zen-requirements {
   background-image: $dolphin;
@@ -175,14 +214,14 @@ footer {
   transform: scaleX(1);
 }
 
-.next > a, .viewall > a, #zen-resources > ul > li > a, footer > a {
+.next > a, .viewall > a, footer > a {
   font-size: 30px;
   background-color: $accent2;
   color: $primary;
   transition: background-color .3s ease-in-out;
 }
 
-.next > a:hover, .viewall > a:hover, #zen-resources > ul > li > a:hover, footer > a:hover {
+.next > a:hover, .viewall > a:hover, footer > a:hover {
   font-size: 30px;
   background-color: $primary;
   color: $accent2;
